<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/orange6"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/menu"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_menu" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="29dp"
                android:layout_weight="1"
                android:src="@drawable/downloaddd" />

            <ImageView
                android:id="@+id/search"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:padding="12dp"
                android:src="@drawable/ic_baseline_search_24" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="217dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorMarginBottom="1dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="1.6dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="@color/orange1"
                    app:sliderScrollTimeInSec="1"
                    app:sliderStartAutoCycle="true"

                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    app:layout_constraintTop_toBottomOf="@id/imageSlider">

                    <TextView
                        android:id="@+id/header1"
                        android:layout_width="298dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="20dp"
                        android:padding="4dp"
                        android:text="@string/header1"
                        android:textColor="@color/black"
                        android:textSize="21sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/btnViewAll"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/btnViewAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:drawableEnd="@drawable/ic_arrow_forward"
                        android:drawablePadding="8dp"
                        android:padding="4dp"
                        android:text="@string/view_all"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="15dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/header1"
                        tools:itemCount="10"
                        tools:listitem="@layout/item_product" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/container1">

                    <TextView
                        android:id="@+id/header2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:padding="4dp"
                        android:text="@string/header2"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/btnViewAll2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:drawableEnd="@drawable/ic_arrow_forward"
                        android:drawablePadding="8dp"
                        android:padding="4dp"
                        android:text="@string/view_all1"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/header2"
                        tools:itemCount="10"
                        tools:listitem="@layout/item_product2" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/container2">

                    <TextView
                        android:id="@+id/header3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/header3"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/btnViewAll3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_arrow_forward"
                        android:drawablePadding="8dp"
                        android:padding="4dp"
                        android:text="@string/view_all_traders"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/header3"
                        tools:itemCount="10"
                        tools:listitem="@layout/item_product3" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/imageSlider2"
                    android:layout_width="match_parent"
                    android:layout_height="217dp"
                    app:layout_constraintTop_toBottomOf="@id/container3"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="1.6dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="@color/orange1"
                    app:sliderScrollTimeInSec="1"
                    app:sliderStartAutoCycle="true"
                    app:sliderIndicatorMarginBottom="1dp"/>

                <TextView
                    android:id="@+id/header4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/videos"
                    android:textAlignment="textStart"
                    android:textColor="@color/gray1"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/imageSlider2" />

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/imageSlider3"
                    android:layout_width="200dp"
                    android:layout_height="217dp"
                    android:layout_marginBottom="70dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/header4"
                    app:layout_constraintVertical_bias="1.0"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="1.6dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="@color/orange1"
                    app:sliderScrollTimeInSec="1"
                    app:sliderStartAutoCycle="true"
                    app:sliderIndicatorMarginBottom="1dp"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>